--- a/package.json
+++ b/package.json
@@ -194,6 +194,7 @@
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
       "!src/**/*.test.{js,jsx}",
+      "!src/test/**/*.{js,jsx}",
       "!src/*/RbGenerated*/*.{js,jsx}",
       "!src/app.js",
       "!src/global-styles.js",
