--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.5'
 services:
-  signals-web: # NGINX
+  web: # NGINX
     build:
       args:
         - BUILD_ENV=acc
@@ -12,7 +12,7 @@ services:
       - "3001:80"
   # networks_mode: "host"
 
-  test-unit-integration:
+  test:
     build:
       context: .
       target: builder
