--- a/package.json
+++ b/package.json
@@ -236,26 +236,26 @@
     "chalk": "1.1.3",
     "compression": "^1.7.3",
     "cross-env": "^5.2.0",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "history": "^4.7.2",
     "hoist-non-react-statics": "2.1.1",
     "immutable": "^3.8.2",
     "intl": "1.2.5",
     "invariant": "^2.2.4",
     "ip": "1.1.5",
-    "leaflet": "1.0.3",
-    "lodash": "^4.17.10",
+    "leaflet": "^1.4.0",
+    "lodash": "^4.17.11",
     "minimist": "1.2.0",
     "moment": "^2.24.0",
-    "proj4": "^2.4.4",
-    "prop-types": "^15.6.2",
+    "proj4": "^2.5.0",
+    "prop-types": "^15.7.2",
     "react": "16.2.0",
     "react-albus": "^2.0.0",
     "react-datepicker": "1.5.0",
     "react-dom": "16.2.0",
     "react-intl": "2.3.0",
     "react-loadable": "4.0.3",
-    "react-reactive-form": "^1.0.26",
+    "react-reactive-form": "^1.0.28",
     "react-redux": "^5.0.7",
     "react-router-dom": "4.1.1",
     "react-router-redux": "5.0.0-alpha.6",
@@ -278,7 +278,7 @@
     "babel-plugin-inline-react-svg": "^0.5.4",
     "babel-plugin-react-intl": "^2.4.0",
     "babel-plugin-react-transform": "2.0.2",
-    "babel-plugin-styled-components": "^1.5.1",
+    "babel-plugin-styled-components": "^1.10.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "babel-plugin-transform-react-constant-elements": "6.23.0",
     "babel-plugin-transform-react-inline-elements": "6.22.0",
@@ -290,19 +290,19 @@
     "circular-dependency-plugin": "3.0.0",
     "coveralls": "2.13.1",
     "css-loader": "0.28.4",
-    "dyson": "^2.0.1",
+    "dyson": "^2.0.3",
     "dyson-generators": "^0.2.0",
     "dyson-image": "^0.2.0",
-    "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.2",
-    "enzyme-to-json": "^3.1.4",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
+    "enzyme-to-json": "^3.3.5",
     "eslint": "3.19.0",
     "eslint-config-airbnb": "15.0.1",
     "eslint-config-airbnb-base": "11.2.0",
     "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "5.0.3",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-redux-saga": "^0.9.0",
     "eventsource-polyfill": "0.9.6",
     "exports-loader": "^0.7.0",
@@ -316,14 +316,14 @@
     "imports-loader": "^0.8.0",
     "jest": "^23.4.1",
     "jest-environment-jsdom": "23.2.0",
-    "jest-environment-jsdom-global": "^1.1.0",
+    "jest-environment-jsdom-global": "^1.1.1",
     "jsdom": "11.11.0",
     "lint-staged": "3.5.1",
     "ngrok": "2.2.9",
     "node-plop": "^0.15.0",
-    "node-sass": "^4.9.2",
-    "nodemon": "^1.18.3",
-    "npm-run-all": "^4.1.3",
+    "node-sass": "^4.11.0",
+    "nodemon": "^1.18.10",
+    "npm-run-all": "^4.1.5",
     "null-loader": "0.1.1",
     "offline-plugin": "4.8.1",
     "open": "0.0.5",
@@ -331,14 +331,14 @@
     "pre-commit": "1.2.2",
     "react-test-renderer": "15.6.1",
     "redux-mock-store": "^1.5.3",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^7.0.2",
+    "rimraf": "^2.6.3",
+    "sass-loader": "^7.1.0",
     "shelljs": "^0.8.2",
     "stijl": "Amsterdam/stijl.git",
     "style-loader": "^0.21.0",
     "url-loader": "0.5.8",
     "webpack": "3.5.5",
     "webpack-dev-middleware": "1.11.0",
-    "webpack-hot-middleware": "^2.22.3"
+    "webpack-hot-middleware": "^2.24.3"
   }
 }
